--- a/salon/templates/saloon/admin_home.html
+++ b/salon/templates/saloon/admin_home.html
@@ -580,7 +580,7 @@ JotForm.paymentExtrasOnTheFly([null,null,{"name":"submitForm","qid":"2","text":"
       <h3>Salon Reservation </h3>
     </div>
     <div class="right_area">
-      <a href="index.html" class="logout_btn">Logout</a>
+      <a href="{% url 'system-logout' %}" class="logout_btn">Logout</a>
     </div>
   </header>
   <!--header area end-->
@@ -593,8 +593,8 @@ JotForm.paymentExtrasOnTheFly([null,null,{"name":"submitForm","qid":"2","text":"
 
     </center>
 
-  <a href="salonOwner_dashboard.html"><i class="fas fa-desktop"></i><span>Dashboard</span></a>
-    <a href="manage_salon.html"><i class="fas fa-desktop"></i><span>Manage your Salon</span></a>
+<!--  <a href="salonOwner_dashboard.html"><i class="fas fa-desktop"></i><span>Dashboard</span></a>-->
+<!--    <a href="manage_salon.html"><i class="fas fa-desktop"></i><span>Manage your Salon</span></a>-->
 
   </div>
   <!--sidebar end-->
